[package]
name = "weex_rust_sdk"
version = "0.6.0"
edition = "2021"
authors = ["Akash Mondal <akash-mondal>"]
description = "Professional Rust SDK for WEEX Exchange - AI Wars ready with full API coverage, AI Log upload, Futures trading"
license = "MIT"
repository = "https://github.com/akash-mondal/weex-rust-sdk"
keywords = ["weex", "crypto", "trading", "exchange", "sdk"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
futures = "0.3"
url = "2.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
rust_decimal = { version = "1.33", features = ["serde-with-float"] }
strum = { version = "0.25", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
